# asteroids_bevy

./: .gitignore  Cargo.toml  asteroids.d.ts  asteroids.js  asteroids_bg.wasm.d.ts  index.html
.cargo/: config.toml
.github/workflows/: deploy_linux.yml  deploy_web.yml
assets/: a.ship.ron  asteroid.cfg.ron  grid.cfg.ron  ship.cfg.ron
assets/meshes/: ship.blend  ship.blend1  ship.glb  ship.gltf
src/: asteroid.rs  bodies.rs  bullet.rs  control.rs  control_ship.rs  grid.rs  input.rs  lib.rs  main.rs  schedule.rs  score.rs  ship.rs  states.rs
